--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 const pageTitle = "Home Page";
+
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -14,6 +16,7 @@ const pageTitle = "Home Page";
 		<a href="/">{pageTitle}</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
+
 		<h1>Changes!</h1>
 	</body>
 </html>
