--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,6 +20,8 @@ const fontWeight = 900;
 const textCase = "uppercase";
 
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -44,9 +46,7 @@ import "../styles/global.css";
         </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Header />
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
@@ -94,5 +94,11 @@ import "../styles/global.css";
                 <p>My goal is not 3 days.</p>
             )
         }
+
+        <Footer />
+
+        <script>
+            import "../scripts/menu.js";
+        </script>
     </body>
 </html>
