--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,8 @@
 const pageTitle = "Blog";
 
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -13,9 +15,7 @@ import "../styles/global.css";
         <title>{pageTitle}</title>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">{pageTitle}</a>
+        <Header />
         <h1>My Astro Learning {pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
@@ -23,5 +23,10 @@ import "../styles/global.css";
             <li><a href="/posts/posts-2/">Post 2</a></li>
             <li><a href="/posts/posts-3/">Post 3</a></li>
         </ul>
+        <Footer />
+
+        <script>
+            import "../scripts/menu.js";
+        </script>
     </body>
 </html>
