--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 const pageTitle = "Home Page";
 
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -13,10 +15,11 @@ import "../styles/global.css";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">{pageTitle}</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-
+		<Header />
 		<h1>Changes!</h1>
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
